# ros2_xarm6_customised_with_kinect

xarm_api/config/: xarm_params.yaml
xarm_description/urdf/: xarm_device_macro.xacro
xarm_description/urdf/gripper/: xarm_gripper.urdf.xacro
xarm_description/urdf/xarm6/: xarm6.urdf.xacro  xarm6_robot_macro.xacro
xarm_move/: CMakeLists.txt  package.xml
xarm_move/launch/: move.launch.py
xarm_move/src/: xarm_move_client copy.cpp  xarm_move_client.cpp  xarm_move_client_3.cpp  xarm_move_client_copy.cpp  xarm_move_client_og.cpp  xarm_move_client_two_class working.cpp
xarm_moveit_config/launch/lib/: robot_moveit_config_lib.py
xarm_moveit_config/srdf/: _xarm6_macro.srdf.xacro
xarm_msgs/: CMakeLists.txt
xarm_msgs/srv/: GetTargetPoint.srv
